--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/jit": "^0.1.18",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
