add image component

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_STRAPI_API_URL=https://exotic-auto-collection-backend-m6l5e.ondigitalocean.app/autos
+NEXT_PUBLIC_STRAPI_API_URL=https://exotic-auto-collection-backend-m6l5e.ondigitalocean.app
 PREVIEW_SECRET=welcometothejungle
