--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.4.0",
-    "react-modal": "^3.14.3"
+    "react-modal": "^3.14.3",
+    "react-player": "^2.9.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.4",
