--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/jit": "^0.1.18",
+    "cloudinary-react": "^1.7.0",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
