--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formspree/react": "^2.2.4",
     "@tailwindcss/jit": "^0.1.18",
     "cloudinary-react": "^1.7.0",
     "next": "11.1.2",
